# cmake-boilderplate

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt
exe/src/: main.cpp
lib/: CMakeLists.txt
lib/include/lib/: lib.h
lib/src/: lib.cpp
